[package]
name = "anynode"
version = "0.1.0"
edition = "2021"
description = "CLI tool for extracting PMTiles map data and uploading to Logos Storage"
license = "GPL-3.0-or-later"

[dependencies]
storage-bindings = "0.2"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
indicatif = "0.18"
tracing-indicatif = "0.3"

[dev-dependencies]
mockall = "0.14"
proptest = "1.10"
tempfile = "3.25"
assert_matches = "1.5"
